<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_transaction"
        android:icon="@drawable/ic_credit_card_multiple"
        android:title="@string/menu_title_transaction" />
    <item
        android:id="@+id/menu_card_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/menu_title_card_info" />
    <item
        android:id="@+id/menu_find_purchase"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_find_purchase" />
    <item
        android:id="@+id/menu_receipt"
        android:icon="@drawable/ic_receipt_black_24dp"
        android:title="@string/menu_receipt" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/menu_logout" />
</menu>