<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/date_time" />

        <TextView
            android:id="@+id/tv_date_time"
            style="@style/TextViewField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="16/11/1994" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/card_number" />

        <TextView
            android:id="@+id/tv_card_number"
            style="@style/TextViewField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="123456789" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/purchase_amount" />

        <TextView
            android:id="@+id/tv_amount_purchase"
            style="@style/TextViewField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="1.0" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/discount_amount" />

        <TextView
            android:id="@+id/tv_amount_discount"
            style="@style/TextViewField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="0.05" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/discount_percent" />

        <TextView
            android:id="@+id/tv_percent_discount"
            style="@style/TextViewField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="0.3" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/amount_for_paying" />

        <TextView
            android:id="@+id/tv_amount_for_paying"
            style="@style/TextViewField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="0.3" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/added_bonuses" />

        <TextView
            android:id="@+id/tv_added_bonuses"
            style="@style/TextViewField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="0.05" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/current_amount_bonuses" />

        <TextView
            android:id="@+id/tv_current_amount_bonuses"
            style="@style/TextViewField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="0.05" />


        <Button
            android:id="@+id/btn_new_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/new_purchase" />

    </LinearLayout>
</ScrollView>