<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/card_number" />

        <EditText
            style="@style/EditTextField"
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:inputType="numberDecimal"
            tools:text="123456789" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/card_info_name" />

        <TextView
            style="@style/TextViewField"
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="Test" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/card_info_surnname" />

        <TextView
            style="@style/TextViewField"
            android:id="@+id/tv_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="Test" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/card_info_third_name" />

        <TextView
            style="@style/TextViewField"
            android:id="@+id/tv_third_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="Test" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/card_info_vip_card" />

        <TextView
            style="@style/TextViewField"
            android:id="@+id/tv_is_vip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="No" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/card_info_virtual_card" />

        <TextView
            style="@style/TextViewField"
            android:id="@+id/tv_virtual_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="No" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/card_info_bonuses_amount" />

        <TextView
            style="@style/TextViewField"
            android:id="@+id/tv_current_amount_bonuses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="0.05" />


        <Button
            android:id="@+id/btn_get_card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/card_info_get" />

    </LinearLayout>
</ScrollView>