<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/stock" />

        <Spinner
            style="@style/TextViewField"
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/card_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="horizontal">

            <EditText
                style="@style/EditTextField"
                android:id="@+id/et_card_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/default_margin"
                android:src="@drawable/ic_photo_camera_black_24dp" />
        </LinearLayout>

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/phone_number" />

        <EditText
            style="@style/EditTextField"
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:hint="@string/phone_number_hint"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/TitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/purchase_amount" />

        <EditText
            style="@style/EditTextField"
            android:id="@+id/et_amount_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_perform_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/perform_transaction" />

    </LinearLayout>
</ScrollView>